<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.lomoment.serialportsample.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_language"></TextView>

        <Spinner
            android:id="@+id/sp_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/language"></Spinner>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_init_serialport_path" />

        <Spinner
            android:id="@+id/sp_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/serialport_path"></Spinner>

        <Spinner
            android:id="@+id/sp_baudrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/serialport_baudrate"></Spinner>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickCreateSerialPort"
            android:text="@string/create_serialport" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/create_hint"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:colorControlNormal="#4d4d4d"
            android:popupBackground="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aisle_row" />

        <EditText
            android:id="@+id/et_x"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:text="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aisle_column" />

        <EditText
            android:id="@+id/et_y"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:text="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aisle_type" />

        <Spinner
            android:id="@+id/sp_aisle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/aisle_type"></Spinner>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/open_repetition_deliver" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_query_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickQueryMachine"
            android:text="@string/query_machine" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSendMsg"
            android:text="@string/deliver_operation" />


        <Button
            android:id="@+id/btn_clear_seq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickClearSeq"
            android:text="@string/clear_seq" />

        <Button
            android:id="@+id/btn_clear_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickClearTask"
            android:text="@string/clear_task" />

        <Button
            android:id="@+id/btn_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickEncapsulationClass"
            android:text="@string/into_wrapper_class" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_brightness" />

        <EditText
            android:id="@+id/edt_light_brightness"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:text="1" />

        <Button
            android:id="@+id/btn_change_light_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickChangeLightBrightness"
            android:text="@string/submit" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/setting_lift_machine_storey"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_storey0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="2"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="3"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="4"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="5"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="6"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="7"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="8"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="9"
            android:inputType="number"
            android:minWidth="90dp" />

        <EditText
            android:id="@+id/edt_storey9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="10"
            android:inputType="number"
            android:minWidth="90dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSetAllStorey"
            android:text="@string/submit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickQueryListAllStorey"
            android:text="@string/query_all" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickResetStorey"
            android:text="@string/reset_storey" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_number_of_plies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_plies"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_single_storey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/storey_height"
            android:inputType="number" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSetSingleStorey"
            android:text="@string/setting_single_storey" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_auto_query_storey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/auto_query_hint"
            android:inputType="number" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickAutoQueryStorey"
            android:text="@string/auto_query_storey" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickQueryMachineState"
            android:text="@string/query_machine_state" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickLiftPlatformReset"
            android:text="@string/lift_platform_reset" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/batch_test"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_test_rows" />

        <EditText
            android:id="@+id/et_countx"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:text="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_test_column" />

        <EditText
            android:id="@+id/et_county"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:text="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickTestAll"
            android:text="@string/start_test" />


        <CheckBox
            android:id="@+id/checkbox_all_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/open_repetition_test" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_query_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
