<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lomoment.serialportsample.MainTwoActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_init_serialport_path" />

        <Spinner
            android:id="@+id/sp_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/serialport_path"></Spinner>

        <Spinner
            android:id="@+id/sp_baudrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/serialport_baudrate"></Spinner>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickCreateSerialPort"
            android:text="@string/create_serialport" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:colorControlNormal="#4d4d4d"
            android:popupBackground="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aisle_row" />

        <EditText
            android:id="@+id/et_x"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:text="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aisle_column" />

        <EditText
            android:id="@+id/et_y"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="8"
            android:text="1" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/open_repetition_deliver" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_query_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickQueryMachine"
            android:text="@string/query_machine" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSendMsg"
            android:text="@string/deliver_operation" />

        <Button
            android:id="@+id/btn_clear_seq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickClearSeq"
            android:text="@string/clear_seq" />

        <Button
            android:id="@+id/btn_clear_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickClearTask"
            android:text="@string/clear_task" />

        <Button
            android:id="@+id/btn_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickBack"
            android:text="@string/go_back" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
